<resources>
    <string name="app_name">Calculator App</string>
    <string name="c">C</string>
    <string name="sum_or_remove">+/-</string>
    <string name="percentage_symbol">%</string>
    <string name="divide_symbol">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplication_symbol">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="reduce_symbol">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sum_symbol">+</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="del">DEL</string>
    <string name="equal">=</string>
</resources>