<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <TextView
        android:id="@+id/resultHolder"
        android:gravity="end|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="60sp"
        android:textColor="#80000000"/>

    <TextView
        android:id="@+id/expression"
        android:hint="@string/_0"
        android:textColorHint="#000000"
        android:gravity="end|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_layout"
        android:layout_below="@+id/resultHolder"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="40sp"
        android:textColor="#000000"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cBtn"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/c"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addSubBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/sum_or_remove"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/modBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/percentage_symbol"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divideBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/ripple_effect_purple"
                android:textColor="@color/white"
                android:text="@string/divide_symbol"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sevenBtn"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/_7"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eightBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/_8"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nineBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/_9"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/ripple_effect_purple"
                android:textColor="@color/white"
                android:text="@string/multiplication_symbol"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fourBtn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="0.5dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_black"
                android:text="@string/_4"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fiveBtn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_black"
                android:text="@string/_5"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sixBtn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_black"
                android:text="@string/_6"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subBtn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect_purple"
                android:text="@string/reduce_symbol"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/oneBtn"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/_1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/twoBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/_2"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/threeBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/_3"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sumBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/ripple_effect_purple"
                android:textColor="@color/white"
                android:text="@string/sum_symbol"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dotBtn"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/dot"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zeroBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/_0"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:background="@drawable/ripple_effect_black"
                android:textColor="@color/white"
                android:text="@string/del"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equalBtn"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/ripple_effect_yellow"
                android:textColor="@color/white"
                android:text="@string/equal"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

  </RelativeLayout>